# geocruncher

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  Jenkinsfile  README.md  api-exemples.md  api-setup.py  celeryconfig.py  geocruncher-setup.py  profile_topo_reader.py  pyproject.toml  run.sh  runner_test.py  setup.cfg  setup.py  shell.nix
GeoCruncher/: GeologicalModel3D.py  main.py
api/: api.py  redis.py  tasks.py  utils.py
api/utils/: redis_client.py
doc/: api-examples.md  command-line.md  dependencies.md  mesh-generation.md  protocol.md  setup.md
doc/design/: pseudo_code.txt
docker/: Dockerfile.api  Dockerfile.build  Dockerfile.common  Dockerfile.worker  dev.docker-compose.yaml  geocruncher.dev.service  geocruncher.docker-compose.yaml  geocruncher.prod.service  local.Dockerfile  local.docker-compose.yaml  prod.docker-compose.yaml  server.Dockerfile
geo-algo/VK-Aquifers/: .gitignore  AquiferCalc.cpp  AquiferCalc.h  Bindings.cpp  CMakeLists.txt  CommonDefs.h  FileIO.cpp  FileIO.h  Main.cpp  Main.h  TestSuite.cpp  TestSuite.h  pyproject.toml
geo-algo/VK-Aquifers/res/: Surrounded-Box.off  U-mesh-flipped.off  U-mesh.off  box1.off
geocruncher/: ComputeIntersections.py  GeologicalModel3D.py  Interpolation.py  MeshGeneration.py  TunnelFunctions.py  TunnelShapeGeneration.py  __main__.py  computations.py  fault_intersections.py  geo_algo.py  geomodeller_data.py  geomodeller_import.py  geomodeller_project.py  main.py  myxmltools.py  off.py  profiler.py  rigs.py  topography_reader.py  tunnel_shape_generation.py  voxel_computation.py
geocruncher-api/: Dockerfile  main.py  pyproject.toml
geocruncher-api/src/geocruncher-api/: __main__.py  celery.py  utils.py
geocruncher-api/src/geocruncher_api/: api.py  tasks.py
geocruncher-common/: pyproject.toml
geocruncher-common/src/geocruncher_common/: celery_app.py  celeryconfig.py  redis.py  tasks.py  utils.py
geocruncher-common/src/geocruncher_common/models/: __init__.py  common.py  groundwater.py  intersections.py  meshes.py  tunnels.py
geocruncher-worker/: main.py  pyproject.toml
geocruncher-worker/src/geocruncher_worker/: computations.py  main.py  tasks.py  topography_reader.py  voxel_computation.py
geocruncher-worker/src/geocruncher_worker/profiler/settings/: gwb_meshes.py  intersections.py  tunnel_meshes.py
geocruncher-worker/tests/: slice_out.json  test_geocruncher.py  test_tunnel.py
geocruncher-worker/tests/dummy_project/: configuration.json  geocruncher_dem.asc  points.json  tunnel.json
geocruncher/mesh_io/: draco.py  mesh_io.py  off.py
geocruncher/profiler/: __init__.py  config.py  profiler.py  storage.py  util.py
geocruncher/profiler/settings/: faults.py  faults_intersections.py  gwb_meshes.py  intersections.py  meshes.py  tunnel_meshes.py  voxels.py
monitoring/: monitoring.docker-compose.yaml
monitoring/alloy/: config.alloy
monitoring/grafana/provisioning/dashboards/: celery_exporter_dashboard_overview.json  celery_exporter_dashboard_task.json  dashboards.yml  profiling_dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.yml
pykarstnsim/: .gitignore  CMakeLists.txt  demo.py  fix_typings.py  karstnsim_bindings.cpp  pyproject.toml
pykarstnsim/demo/: demo.py  milandre.py
pykarstnsim/demo/milandre/: milandre_faults_377.draco  milandre_faults_378.draco  milandre_faults_379.draco  milandre_faults_380.draco  milandre_faults_381.draco  milandre_faults_382.draco  milandre_faults_383.draco  milandre_faults_384.draco  milandre_faults_385.draco  milandre_faults_386.draco  milandre_faults_387.draco  milandre_faults_388.draco  milandre_faults_389.draco  milandre_faults_390.draco  milandre_faults_391.draco  milandre_faults_392.draco  milandre_faults_393.draco  milandre_faults_394.draco  milandre_faults_395.draco  milandre_faults_396.draco  milandre_faults_397.draco  milandre_faults_398.draco  milandre_faults_399.draco  milandre_surface.f32.array  milandre_units_837.draco  milandre_units_838.draco  milandre_units_839.draco  milandre_units_840.draco  milandre_units_841.draco  milandre_units_842.draco  milandre_units_843.draco
pykarstnsim/src/pykarstnsim/: config.py  karstnsim.py  loaders.py
pykarstnsim/src/pykarstnsim/models/: __init__.py  connectivity_matrix.py  project_box.py  sink.py  spring.py  surface.py  utils.py  waypoint.py
scripts/: api-local.sh  api.sh  docker.sh  run.sh  worker-local.sh  worker.sh
tests/: test_geocruncher.py  test_slice.py  test_tunnel.py
tests/dummy_project/: arcLength.json  boundaries.json  geocruncher_project.xml  resolution.json  sections.json  slice.json  tunnel.json
