[project]
name = "geocruncher"
version = "0.1.0"
description = "Standalone application for Geological Computations"
readme = "README.md"
requires-python = "~=3.9"
dependencies = []

[tool.uv.sources]
pygeoalgo = { workspace = true }
pykarstnsim = { workspace = true }
geocruncher-api = { workspace = true }
geocruncher-worker = { workspace = true }

[tool.uv.workspace]
members = [
    "geo-algo/VK-Aquifers",
    "pykarstnsim",
    "geocruncher-api",
    "geocruncher-worker",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]>=6.0.0",
]
