[project]
name = "geocruncher"
version = "0.1.0"
description = "Standalone application for Geological Computations"
readme = "README.md"
requires-python = "~=3.9.0"
dependencies = []

[tool.uv.sources]
pygeoalgo = { workspace = true }
pykarstnsim = { workspace = true }
geocruncher-api = { workspace = true }
geocruncher-common = { workspace = true }
geocruncher-worker = { workspace = true }

[tool.uv.workspace]
members = [
    "geo-algo/VK-Aquifers",
    "pykarstnsim",
    "geocruncher-api",
    "geocruncher-common",
    "geocruncher-worker",
]

[dependency-groups]
dev = [
    "geocruncher-api",
    "geocruncher-common",
    "geocruncher-worker",
    "pykarstnsim",
    "pygeoalgo",
]
