[project]
name = "geocruncher"
version = "0.4.0"
description = "Geocruncher: a bridge between Gmlib and VK, plus its Flask/Celery API layer."
requires-python = ">=3.12"
dependencies = [
    "DracoPy",
    "celery",
    "flask",
    "forgeo",
    "forgeo-gmlib",
    "forgeo-rigs",
    "lxml",
    "meshio",
    "numpy",
    "pyvista",
    "redis",
    "scikit-image",
    "scipy",
    "sympy",
]

[project.scripts]
geocruncher = "geocruncher.main:main"
api = "api.api:main"

[dependency-groups]
dev = [
    "pytest",
    "watchdog[watchmedo]",
    "pybind11[global]",
]
server = [
    "gunicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geocruncher", "api"]
