[project]
name = "geocruncher-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.1",
    "geocruncher-common",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
geocruncher-common = { workspace = true }
