[project]
name = "pykarstnsim"
version = "0.1.31"
description = "A Python interface for the KarstNSim C++ library"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "shapely>=2.0.7",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.targets = ["pykarstnsim_core"]
wheel.packages = ["src/pykarstnsim"]
cmake.build-type = "Release"

[tool.uv.sources]
pykarstnsim = { workspace = true }
pygeoalgo = { workspace = true }

[tool.cibuildwheel]
build-frontend = "build[uv]"
archs = "x86_64"
build = "cp3{10,11,12,13}-manylinux*"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.5",
    "pygeoalgo",
    "pykarstnsim",
    "pyproj>=3.6.1",
]
