[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "pygeoalgo"
version = "0.1.1"
description = "A Python interface for the GeoAlgo C++ library"
requires-python = "~=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.5",
]
