[project]
name = "pygeoalgo"
version = "0.1.1"
description = "A Python interface for the GeoAlgo C++ library"
requires-python = "~=3.9.0"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
ninja.make-fallback = false

# Do not set this to Release!
# There is a segfault with -O3 and a full day of debugging did not help.
cmake.build-type = "RelWithDebInfo"
# symbols are stripped anyway unless uncommented
#install.strip = false

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.5",
]
